Fixed spacing between hashtag movememnts on landing page

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -221,3 +221,19 @@ li a:hover {
 a:any-link {
    color:white;
 }
+
+#movement-list {
+  list-style-type: none;
+}
+
+li {
+  border: thin solid black;
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  width: 300px;
+}
+
+li span {
+  flex-grow: 1;
+}
